<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activity.MainActivity">

    <EditText
        android:id="@+id/userIdLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/user_login_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/icons"
        android:theme="@style/Widget.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
    android:id="@+id/signUpText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:text="@string/sign_up"
    android:textColor="@color/secondary_text"
    app:layout_constraintBottom_toBottomOf="@+id/loginButton"
    app:layout_constraintEnd_toStartOf="@+id/loginButton"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintTop_toTopOf="@+id/loginButton" />

    <ImageView
        android:id="@+id/user_login_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:src="@drawable/baseline_account_circle_black_48"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/userIdLogin"
        app:layout_constraintEnd_toStartOf="@+id/userIdLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userIdLogin" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo_transparent_background"
        app:layout_constraintBottom_toTopOf="@+id/userIdLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>