<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activity.SignUpActivity"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/user_email"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/userEdit" />

    <EditText
        android:id="@+id/phoneNumEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/Phon_constraint"
        android:inputType="textPersonName|number"
        android:singleLine="true"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toTopOf="@+id/CPcheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/emailEdit" />

    <EditText
        android:id="@+id/userEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/CPcheckBox"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:buttonTint="@color/colorPrimaryDark"
        android:text="@string/careProvider"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
        app:layout_constraintStart_toStartOf="@+id/phoneNumEdit" />

    <CheckBox
        android:id="@+id/PcheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:buttonTint="@color/colorPrimaryDark"
        android:text="@string/patient"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toBottomOf="@+id/CPcheckBox"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumEdit"
        app:layout_constraintStart_toEndOf="@+id/CPcheckBox"
        app:layout_constraintTop_toTopOf="@+id/CPcheckBox" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_up"
        android:textColor="@color/icons"
        android:theme="@style/Widget.MaterialComponents.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="385dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo_transparent_background"
        app:layout_constraintBottom_toTopOf="@+id/userEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/userEdit"
        app:layout_constraintEnd_toStartOf="@+id/userEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userEdit"
        app:srcCompat="@drawable/baseline_account_circle_black_48" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/emailEdit"
        app:layout_constraintEnd_toStartOf="@+id/emailEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailEdit"
        app:srcCompat="@drawable/baseline_email_black_48" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/phoneNumEdit"
        app:layout_constraintEnd_toStartOf="@+id/phoneNumEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phoneNumEdit"
        app:srcCompat="@drawable/baseline_phone_black_48" />

    <TextView
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/cancelBtn"
        android:textColor="@color/secondary_text"
        app:layout_constraintBottom_toBottomOf="@+id/signUpBtn"
        app:layout_constraintEnd_toStartOf="@+id/signUpBtn"
        app:layout_constraintTop_toTopOf="@+id/signUpBtn" />

</android.support.constraint.ConstraintLayout>